[tool.poetry]
name = "SNMP-helper"
version = "0.1.0"
description = "SNMP library compatibility module"
authors = ["Anders Birkenes <datagutten@datagutten.net>"]
readme = "README.md"
packages = [{ include = "snmp_compat" }, { include = "mib_parser" }]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.easysnmp.dependencies]
easysnmp = "^0.2.6"
[tool.poetry.group.ezsnmp.dependencies]
ezsnmp = "^1.0.0"
[tool.poetry.group.netsnmp.dependencies]
netsnmp-py = { git = "https://github.com/datagutten/netsnmp-py3.git", branch = "exception_fix" }
[tool.poetry.group.pysnmp.dependencies]
pysnmp = "^7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["snmp_compat", "mib_parser"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]